Restore manual off time func

--- a/custom_components/smart_controller/translations/en.json
+++ b/custom_components/smart_controller/translations/en.json
@@ -68,7 +68,7 @@
                     "auto_off_minutes": "Automatic off (optional):",
                     "illuminance_sensor": "Illuminance sensor (optional):",
                     "illuminance_cutoff": "Illuminance cutoff (optional):",
-                    "manual_control_minutes": "Manual control (optional):"
+                    "manual_control_minutes": "Manual off time (optional):"
                 }
             },
             "occupancy": {
@@ -136,7 +136,7 @@
                     "auto_off_minutes": "Automatic off (optional):",
                     "illuminance_sensor": "Illuminance sensor (optional):",
                     "illuminance_cutoff": "Illuminance cutoff (optional):",
-                    "manual_control_minutes": "Manual control (optional):"
+                    "manual_control_minutes": "Manual off time (optional):"
                 }
             },
             "occupancy": {
